# opensn_inverse

./: .gitignore  CMakeLists.txt  README.md  main.cc
inverse_solver/: inverse_solver.cc  inverse_solver.h  lbs_inverse_solver.cc  lbs_inverse_solver.h
problems/brute_force/one_region_1d/: newton.py  run.lua
problems/brute_force/one_region_2d/: newton.py  run.lua
problems/brute_force/two_region_2d/: run.lua
problems/brute_force_1d/: newton.py  run.lua
problems/brute_force_2d/: newton.py  run.lua
problems/brute_force_two_region/: background.xs  objective.py  run.lua
problems/jcr_1d_test_case/: adjoint_run.lua  constant.lua  constant_perturb.lua  forward_ref.lua  ndse_1dtest.py  run.sh
problems/one_region/: fuel.xs  run.lua
problems/rz/: fuel.xs
problems/three_regions/: heavy_fuel.xs  light_fuel.xs  plot_result.py  run.lua
problems/two_regions/: run.lua  test.lua
problems/xy/one_region/: constant.lua  gradient.lua  run.lua
problems/xy/three_regions/: plot_result.py  run.lua
problems/xy/two_regions/: grad_test.lua  gradient.lua  obj_test.lua  objective.lua  run.lua
